force-app/main/default/objects/AOB_Products__c/AOB_Products__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AOB_Products</label>
</CustomObject>