force-app/main/default/objects/AOB_Products__c/fields/MonthlyFee__c.field-meta.xml
<CustomField>
    <fullName>MonthlyFee__c</fullName>
    <label>MonthlyFee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>