force-app/main/default/objects/AOB_Products__c/fields/OpeningDeposit__c.field-meta.xml
<CustomField>
    <fullName>OpeningDeposit__c</fullName>
    <label>OpeningDeposit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>