force-app/main/default/objects/AOB_Products__c/fields/ProductLogoName__c.field-meta.xml
<CustomField>
    <fullName>ProductLogoName__c</fullName>
    <label>ProductLogoName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>