force-app/main/default/objects/AOB_Products__c/fields/TermsURL__c.field-meta.xml
<CustomField>
    <fullName>TermsURL__c</fullName>
    <label>TermsURL</label>
    <type>Url</type>
</CustomField>